--- a/α版本.md
+++ b/α版本.md
@@ -1,12 +1,11 @@
-# SWTC项目升级计划
+# SWTC项目升级计划-α版本
 
 ## 目录
 <!-- TOC -->
 
-- [SWTC项目升级计划](#swtc项目升级计划)
+- [SWTC项目升级计划-α版本](#swtc项目升级计划-α版本)
   - [目录](#目录)
-  - [版本](#版本)
-  - [理想项目架构](#理想项目架构)
+  - [α版本](#α版本)
     - [后台架构](#后台架构)
       - [项目框架](#项目框架)
       - [项目分层](#项目分层)
@@ -20,9 +19,8 @@
         - [后台权限](#后台权限)
         - [定时任务](#定时任务)
         - [数据备份](#数据备份)
-        - [服务器日志](#服务器日志)
         - [数据表内结构更换](#数据表内结构更换)
-        - [项目部署和监控](#项目部署和监控)
+        - [项目部署和监控-（进行调研和继续完善，取现版本最佳方案）](#项目部署和监控-进行调研和继续完善取现版本最佳方案)
         - [分布式和负载均衡](#分布式和负载均衡)
         - [报表统计](#报表统计)
         - [操作日志](#操作日志)
@@ -31,18 +29,13 @@
         - [管理后台](#管理后台)
         - [APP（Android）](#appandroid)
         - [IOS](#ios)
-        - [小程序](#小程序)
-        - [公众号网页](#公众号网页)
+        - [小程序（可选）](#小程序可选)
+        - [公众号网页（可选）](#公众号网页可选)
 
 <!-- /TOC -->
 
-## 版本
 
-- [Basis版本](./Basis版本.md)
-- [α版本](./α版本.md)（后续完善）
-- β版本（后续完善）
-
-## 理想项目架构
+## α版本
 
 ### 后台架构
 
@@ -55,68 +48,50 @@
 
 ##### 数据库
 
-- Mysql 关系型存储结构，适用于通用业务
-- Redis 持久化session,做登录验证和权限处理
 - MongoDB(可选) 做定时的报表分析存储，等其他
 
 ##### 数据库操作层（注：也可整合到处理层中）
 
-- 使用ORM框架进行封装，对Mysql数据库进行基础操作
-- 复杂操作和其他业务不同的逻辑可以在代码里面直接使用 SQL语句
-- Redis 数据处理在业务层处理，做好规范的认证体系
+- 继续完善
 
 ##### 处理层
 
-- SWTC LIB web socket 链接处理函数
-- 基础的业务逻辑处理函数
-- 复杂整合的业务处理函数，为接口层做支撑
+- 继续完善
 
 ##### 接口层
 
-- API call 调用处理层进行处理
-- 基础接口必须采用 RESTful 接口规范
-- 业务接口非必要采用 RESTful 接口规范
+- 继续完善
 
 #### 解决方案
 
 ##### 项目安全
 
-1. 使用 session + cookie 认证方式进行认证（老版本-可选）
-2. 使用 OAuth2.0 进行认证
-3. 密码，钱包地址，私钥在传输时进行加密，密码在数据库内部进行加密
-4. 接口通用权限验证
+1. 使用 OAuth2.0 进行认证
+2. 继续完善
 
 ##### SWTC LIB 连接操作
 
-1. 使用处理层进行 SWTC LIB 库对接操作，保证及时更新和返回的数据结构一致
+1. 继续完善，更新
 
 ##### 后台权限
 
-1. 进行权限分级，角色判断。6-8个不同角色（如行政，审计，游客等），一种超级管理员
-2. 管理接口做权限控制
+1. 进行权限分级，角色判断。6-8个不同角色（如行政，审计，游客等
 
 ##### 定时任务
 
-1. 使用EggJs框架内部程序做定时任务
-2. 数据库表中设计定时任务执行的日志（如有必要，做定时任务锁）
+1. 数据库表中设计定时任务执行的日志（如有必要，做定时任务锁）
 
 ##### 数据备份
 
-1. 使用宝塔Liunx 服务器管理面板定期备份Mysql库到阿里OSS文件存储系统
-2. Redis 先手动备份，自动备份后期研究
-3. Mongodb 先手动备份，自动备份后期研究
+1. Redis 先手动备份，自动备份后期研究
+2. Mongodb 先手动备份，自动备份后期研究
 
-##### 服务器日志
-
-1. 使用EggJs内部日志系统存储在系统本地
-2. 存储在数据库内部（后期可选）
 
 ##### 数据表内结构更换
 
-1. 系统内部建立数据库结构维护文件，更新表结构先更新文件，同步到git，在git上可以找到结构的更换说明
-2. 使用自动化版本库工具进行管理（后期可选）
+1. 使用自动化版本库工具进行管理（后期可选）
 
-##### 项目部署和监控
+##### 项目部署和监控-（进行调研和继续完善，取现版本最佳方案）
 
 1. 使用EggJS 内部命令进行部署和down机重启（首选，需要调研）
 2. 使用PM2 进行部署和down机重启（老版本使用办法，新版本是否可行需要调研）
@@ -129,11 +104,10 @@
 ##### 报表统计
 
 1. 定时任务分析数据到MongoDB中（或者MySql Json字段），可适用，日、周、月、年统计
-2. 用apiCall的形式进行报备统计，可适用实时统计。
 
 ##### 操作日志
 
-1. 数据记录与MySQL中，系统后台封装统计操作日志处理函数
+1. 继续完善
 
 ### 前台架构
 
@@ -156,10 +130,10 @@
 
 - 原生或者 [ReactNative](https://reactnative.cn/),(Vue跨平台框架需要调研)
 
-##### 小程序
+##### 小程序（可选）
 
 - [Taro](https://taro.aotu.io/),一处代码转网页和小程序
 
-##### 公众号网页
+##### 公众号网页（可选）
 
 - [Taro](https://taro.aotu.io/),一处代码转网页和小程序
